[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/BlueCrosshair_01_64x.png" type="Texture" id=2]
[ext_resource path="res://Guns/ak47black.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Hand.gd" type="Script" id=4]
[ext_resource path="res://Guns/glockblack_.tscn" type="PackedScene" id=5]
[ext_resource path="res://Guns/shotgun2.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 1.85

[sub_resource type="ConvexPolygonShape" id=4]
points = PoolVector3Array( -0.462286, -0.14019, -1.04657, 0.479285, 0.0477005, 1.05183, 0.449707, 0.15466, 1.07267, 0.425041, 0.155475, -1.13193, -0.218049, 0.44404, 0.979477, -0.0862207, -0.486572, 0.986975, 0.233828, -0.432843, -1.01315, 0.0477005, 0.479285, -1.05183, -0.437672, -0.113964, 1.1326, -0.427971, 0.25738, -0.922612, 0.417188, -0.270659, 0.95252, 0.231593, 0.442933, 0.898196, 0.131375, 0.048779, 1.40304, -0.116245, 0.0763302, -1.40336, -0.244559, -0.430083, -0.979876, 0.471048, -0.165111, -0.927829, -0.483216, 0.126237, 0.900964, -0.401969, -0.296328, 0.923503, 0.389164, 0.310112, -0.948823, 0.10336, -0.2526, -1.34191, 0.233828, -0.432843, 1.01315, -0.218053, 0.444047, -0.979492, -0.115479, 0.294339, 1.31148, -0.115477, -0.252015, 1.33873, 0.0740982, -0.488095, -0.990103, 0.0477005, 0.479285, 1.05183, -0.379239, 0.31361, 1.01254, 0.292659, -0.196259, 1.27702, 0.472536, 0.153324, -0.957277, -0.222975, -0.277028, -1.27365, 0.211975, 0.239269, -1.30896, -0.276965, 0.264589, -1.24586, -0.48591, -0.112689, 0.932662, -0.488094, 0.074098, -0.990102, 0.294343, -0.115385, -1.3115, 0.238671, 0.293031, 1.25144, 0.38916, 0.310109, 0.948815, -0.306733, 0.075761, 1.31156, 0.260209, 0.420123, -0.985461, -0.401969, -0.296328, -0.923503, -0.296388, -0.401924, 0.923399, 0.360115, -0.346392, -0.889704, -0.306325, -0.0879299, -1.30978, 0.126324, -0.483194, 0.900923, -0.139653, 0.474247, 0.987081, 0.474285, -0.139475, 0.987158, -0.112778, -0.485891, -0.932625, 0.0751666, -0.413057, 1.19343, -0.221175, -0.382273, 1.15547, -0.346342, 0.36016, -0.889815, -0.142438, 0.348022, -1.25334, -0.0604865, -0.413761, -1.19549, 0.396897, -0.221085, -1.12866, 0.294915, 0.103313, 1.31399, 0.153412, 0.472518, -0.957241, 0.442933, 0.231593, 0.898196, 0.478141, -0.059855, -1.04935, -0.116245, 0.0763303, 1.40336, 0.131376, 0.0487793, -1.40304, -0.113462, 0.476591, -1.01894, -0.48591, -0.112689, -0.932662, -0.410949, 0.155678, 1.1603, 0.10345, -0.197934, 1.37038, -0.088596, -0.116001, -1.40148 )

[sub_resource type="CylinderShape" id=3]
height = 1.5
radius = 0.5

[node name="Player" type="KinematicBody" groups=["Player"]]
collision_layer = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Feet" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.65, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.908342, 0 )

[node name="Camera" type="Camera" parent="Head"]
cull_mask = 1048573
current = true
fov = 90.0

[node name="GrappleCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -60 )

[node name="TextureRect" type="TextureRect" parent="Head/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )

[node name="GunCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -200 )

[node name="Hand" type="Spatial" parent="Head/Camera"]
transform = Transform( 1, 0, 0, 0, 0.999633, -0.0271016, 0, 0.0271016, 0.999633, -0.004, -0.129, -0.262 )
script = ExtResource( 4 )
default_pos = Vector3( 0.142, -0.243, -0.322 )
ads_pos = Vector3( -0.004, -0.135, -0.262 )

[node name="Gun3" parent="Head/Camera/Hand" instance=ExtResource( 3 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 0.005, -0.057, 0.023 )

[node name="Gun2" parent="Head/Camera/Hand" instance=ExtResource( 6 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 0.004, -0.011, 0.284 )
visible = false

[node name="Gun1" parent="Head/Camera/Hand" instance=ExtResource( 5 )]
transform = Transform( -1.74846e-08, 0, 0.4, 0, 0.4, 0, -0.4, 0, -1.74846e-08, 0.003, 0.035, -0.046 )
visible = false

[node name="ViewportContainer" type="ViewportContainer" parent="Head/Camera"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Viewport" type="Viewport" parent="Head/Camera/ViewportContainer"]
size = Vector2( 1280, 720 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="GunCamera" type="Camera" parent="Head/Camera/ViewportContainer/Viewport"]
cull_mask = 2
fov = 90.0

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.25, 0 )
enabled = true
cast_to = Vector3( 0, -0.1, 0 )

[node name="WallCheckChest" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -0.6 )

[node name="HeadRays" type="Spatial" parent="."]

[node name="WallCheckHead" type="RayCast" parent="HeadRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="WallCheckHead2" type="RayCast" parent="HeadRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="WallCheckHead3" type="RayCast" parent="HeadRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1, 0 )
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="WallCheckHead4" type="RayCast" parent="HeadRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
cast_to = Vector3( 0, 2, -1.3 )

[node name="WallCheckHead5" type="RayCast" parent="HeadRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 1, 0 )
enabled = true
cast_to = Vector3( 0, 2, -1.3 )

[node name="WallCheckHead6" type="RayCast" parent="HeadRays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.4, 1, 0 )
enabled = true
cast_to = Vector3( 0, 2, -1.3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="DebugOverlay" type="Label" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 14.0

[node name="SprintTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="WallRunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpCayoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="HeadBumperCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 1.5, 0 )

[connection signal="timeout" from="SprintTimer" to="." method="_on_SprintTimer_timeout"]
[connection signal="timeout" from="WallRunTimer" to="." method="_on_WallRunTimer_timeout"]
[connection signal="timeout" from="JumpCayoteTimer" to="." method="_on_JumpCayoteTimer_timeout"]
